<resources>
    <string name="submit">Submit</string>
    <string name="sign_in">Sign In</string>
    <string name="app_name">JagaJual</string>
    <string name="login">Log In</string>

    <!-- Page 1 -->
    <string name="page1_h1">Start selling online with JagaJual</string>
    <string name="page1_h2">The e-commerce platform trusted by over a million businesses worldwide</string>
    <string name="page1_text1">Create your online store</string>
    <string name="page1_text2">Grow your audience</string>
    <string name="page1_text3">Manage from anywhere</string>
    <string name="page1_btn1">Get Started</string>

    <!-- Page 2 Get Started -->
    <string name="page2_h1">Start selling with JagaJual</string>
    <string name="page2_text1">Choose your seller</string>
    <string name="page2_text2">Allow supplier to apply</string>
    <string name="page2_btn1">Continue</string>
    <string name="btn_skip">Skip</string>

    <!-- Page auth sign in -->
    <string name="sign_in_h1_2">With JagaJual</string>
    <string name="sign_in_first_name">First Name</string>
    <string name="sign_in_last_name">Last Name</string>
    <string name="sign_in_address">Full Address</string>
    <string name="sign_in_email">Email</string>
    <string name="sign_in_password">Password</string>
    <string name="sign_in_confirm_password">Confirm Password</string>
    <string name="sign_in_text1">Register As:</string>
    <string name="sign_in_as_seller">As Seller</string>
    <string name="sign_in_as_depositer">As Depositer</string>
    <string name="sign_in_text2">Do you have an account? Log in</string>
    <string name="sign_in_text2b">Do you have an account? Sign in</string>
    <string name="sign_in_text3">Privacy Policy</string>

    <string name="username">Username</string>

    <!-- Placeholder -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sigIn_password" />
    <string name="sigIn_text2b" />
</resources>
