<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:fillViewport="true"
    android:background="#fbfaf3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="24dp"
        android:paddingTop="60dp">

        <!-- Header Text -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="start"
            android:layout_marginBottom="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_h1_2"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginLeft="10dp" />
        </LinearLayout>

        <!-- Spacer -->
        <Space android:layout_width="match_parent" android:layout_height="10dp" />

        <EditText
            android:id="@+id/full_name"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:background="@drawable/btnstyle2"
            android:hint="full_name"
            android:inputType="text"
            android:textSize="16dp" />

        <Space android:layout_width="match_parent" android:layout_height="10dp" />

        <!-- Username -->
        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:background="@drawable/btnstyle2"
            android:hint="@string/username"
            android:inputType="text"
            android:textSize="16dp" />

        <Space android:layout_width="match_parent" android:layout_height="10dp" />

        <!-- no handpone -->
        <EditText
            android:id="@+id/number"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:background="@drawable/btnstyle2"
            android:hint="No.HP"
            android:inputType="number"
            android:textSize="16dp" />

        <Space android:layout_width="match_parent" android:layout_height="10dp" />


        <!-- Email -->
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:background="@drawable/btnstyle2"
            android:hint="@string/sign_in_email"
            android:inputType="textEmailAddress"
            android:textSize="16dp" />

        <Space android:layout_width="match_parent" android:layout_height="10dp" />

        <!-- Password -->
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:background="@drawable/btnstyle2"
            android:hint="@string/sign_in_password"
            android:inputType="textPassword"
            android:textSize="16dp" />

        <Space android:layout_width="match_parent" android:layout_height="10dp" />

        <EditText
        android:id="@+id/konfirm_password"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:background="@drawable/btnstyle2"
        android:hint="@string/sign_in_confirm_password"
        android:inputType="textPassword"
        android:textSize="16dp" />

        <Space android:layout_width="match_parent" android:layout_height="30dp" />

        <!-- Checkbox & Terms -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="Saya setuji dengan kententuan "
            android:textColor="@color/black"
            android:textSize="16dp" />

        <CheckBox
            android:id="@+id/accpt_privasy_policy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/sign_in_text3"
            android:textSize="16dp" />

        <!-- Submit Button -->
        <Button
            android:id="@+id/submit"
            android:layout_width="355dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="14dp"
            android:background="@drawable/rounded_button"
            android:text="@string/submit"
            android:textColor="@color/white" />

        <Space android:layout_width="match_parent" android:layout_height="10dp" />

        <!-- Link ke login -->
        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Sudah punya akun. login"
            android:textColor="@color/black"
            android:textSize="16dp" />
        <Space
            android:layout_width="wrap_content"
            android:layout_height="20dp"/>
    </LinearLayout>

</ScrollView>
