<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".getStarted">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <TextView
            android:layout_marginTop="80dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/page2_h1"
            android:width="326dp"
            android:height="40dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/page2_text1"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="or"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/page2_text2"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="40dp">
        <Button

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/page2_btn1"
            android:textColorHint="@color/white"
            android:textSize="16dp"
            android:background="@color/black"
            android:textStyle="bold"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>