<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/linearLayout1">
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/gambar_logo"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="104dp"
        android:orientation="vertical"
        android:padding="9dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="326dp"
            android:height="40dp"
            android:text="@string/page1_h1"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:width="270dp"
            android:height="40dp"
            android:text="@string/page1_h2"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="3dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="19dp"
                    android:src="@drawable/pakeage_plus"
                    tools:srcCompat="@drawable/pakeage_plus" />

                <Space
                    android:layout_width="10dp"
                    android:layout_height="match_parent"/>

                <TextView
                    android:layout_width="203dp"
                    android:layout_height="20dp"
                    android:text="@string/page1_text1"
                    android:textColor="@color/black"/>

            </LinearLayout>
            <Space
                android:layout_width="match_parent"
                android:layout_height="7dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="19dp"
                    android:layout_gravity="center"
                    android:src="@drawable/bar_chart_square_up"
                    tools:srcCompat="@drawable/bar_chart_square_up" />

                <Space
                    android:layout_width="10dp"
                    android:layout_height="match_parent"/>

                <TextView
                    android:layout_width="203dp"
                    android:layout_height="20dp"
                    android:text="@string/page1_text2"
                    android:textColor="@color/black"/>

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="7dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="19dp"
                    android:layout_gravity="center"
                    android:src="@drawable/calender"
                    tools:srcCompat="@drawable/calender" />
                <Space
                    android:layout_width="10dp"
                    android:layout_height="match_parent"/>
                <TextView
                    android:layout_width="203dp"
                    android:layout_height="20dp"
                    android:text="@string/page1_text3"
                    android:textColor="@color/black"/>

            </LinearLayout>


        </LinearLayout>


        <Button
            android:id="@+id/to_sigin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:width="338dp"
            android:height="47dp"
            android:layout_margin="15dp"
            android:background="@drawable/btnstyle1"
            android:text="@string/page1_btn1"
            android:textColor="@color/white" />


    </LinearLayout>
</android.support.constraint.ConstraintLayout>